--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "node项目模板",
   "main": "dest/index.js",
   "scripts": {
-    "start": "node dest/index.js",
     "dev": "nodemon server.js",
-    "build": "babel src --out-dir dest",
+    "start": "node dest/index.js",
+    "compile": "babel src --out-dir dest",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
