--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,12 @@
   "plugins": [
     "transform-decorators-legacy",
     [
+      "transform-builtin-extend",
+      {
+        "globals": ["Error", "Array"]
+      }
+    ],
+    [
       "transform-runtime",
       {
         "helpers": false,
