--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "babel-register": "^6.26.0",
     "eslint": "^4.19.1"
   },
+  "config": {
+    "ghooks": {
+      "commit-msg": "./validate-commit-msg.js"
+    }
+  },
   "dependencies": {
     "babel-runtime": "^6.26.0"
   }
