--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node dest/index.js",
     "compile": "babel src --out-dir dest",
     "lint": "eslint src",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -28,11 +29,6 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "eslint": "^4.19.1"
-  },
-  "config": {
-    "ghooks": {
-      "commit-msg": "./validate-commit-msg.js"
-    }
   },
   "dependencies": {
     "babel-runtime": "^6.26.0"
