--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "node-hot-dev",
   "version": "1.0.0",
   "description": "node项目模板",
-  "main": "dest/index.js",
+  "main": "dest/app.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node dest/index.js",
-    "compile": "babel src --out-dir dest",
-    "lint": "eslint --fix src",
-    "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node src/app.ts",
+    "dev-debug": "nodemon --inspect --watch src/**/* -e ts,tsx --exec node -r ts-node/register src/app.ts",
+    "clean": "rm dest -rf",
+    "compile": "npm run clean && tsc",
+    "build": "npm run lint && npm run compile",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src --ext .js,.ts",
+    "lintfix": "eslint src --fix --ext .js,.ts"
   },
   "keywords": [
     "hot",
@@ -19,18 +22,15 @@
   "author": "lanyue",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "eslint": "^4.19.1"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "eslint": "^6.0.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
   }
 }
