--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "author": "lanyue",
   "license": "MIT",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
+    "@types/koa": "^2.0.49",
+    "@types/koa-router": "^7.0.42",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^6.0.1",
@@ -32,5 +35,10 @@
     "eslint-plugin-standard": "^4.0.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
+  },
+  "dependencies": {
+    "dotenv": "^8.0.0",
+    "koa": "^2.7.0",
+    "koa-router": "^7.4.0"
   }
 }
