--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "camelcase": "^5.3.1",
+    "chalk": "^2.4.2",
     "dotenv": "^8.0.0",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0"
