--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "chalk": "^2.4.2",
     "dotenv": "^8.0.0",
     "koa": "^2.7.0",
-    "koa-router": "^7.4.0"
+    "koa-bodyparser": "^4.2.1",
+    "koa-compress": "^3.0.0",
+    "koa-favicon": "^2.0.1",
+    "koa-mount": "^4.0.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0"
   }
 }
