--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,11 @@
 {
-  "presets": ["env", "stage-2"],
+  "presets": ["@babel/env"],
   "plugins": [
-    "transform-decorators-legacy",
     [
-      "transform-builtin-extend",
-      {
-        "globals": ["Error", "Array"]
-      }
-    ],
-    [
-      "transform-runtime",
+      "@babel/transform-runtime",
       {
         "helpers": false,
-        "polyfill": false,
-        "regenerator": true,
-        "moduleName": "babel-runtime"
+        "regenerator": true
       }
     ]
   ]
