--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node项目模板",
   "main": "dest/index.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon dev.js",
     "start": "node dest/index.js",
     "compile": "babel src --out-dir dest",
     "lint": "eslint --fix src",
@@ -19,18 +19,14 @@
   "author": "lanyue",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "eslint": "^4.19.1"
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "@babel/runtime": "^7.5.5"
   }
 }
