--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "dev": "nodemon dev.js",
     "start": "node dest/index.js",
-    "compile": "babel src --out-dir dest",
-    "lint": "eslint --fix src",
+    "clean": "rm -rf ./dest",
+    "compile": "npm run clean && babel src --out-dir dest",
+    "build": "npm run lint && npm run compile",
+    "lint": "eslint src",
+    "lintfix": "eslint --fix src",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +27,14 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5"
+    "@babel/register": "^7.5.5",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5"
