--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,16 @@
 {
     "env": {
-        "es6": true,
-        "node": true
+        "browser": true,
+        "node": true,
+        "commonjs": true,
+        "jest": true
     },
     "parser": "babel-eslint",
-    "extends": "eslint:recommended",
+    "extends": "standard",
     "parserOptions": {
         "sourceType": "module"
     },
     "rules": {
-        "indent": ["warn", 2],
-        "linebreak-style": ["off", "windows"],
-        "quotes": ["warn", "single"],
-        "semi": "off",
-        "no-console": "off",
-        "no-undef": "error",
-        "no-multiple-empty-lines": [0, {"max": 4}],
-        "no-mixed-spaces-and-tabs": [0]
+        "no-unused-vars": "warn"
     }
 }
