--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {
     "env": {
-        "es6": true,
-        "node": true
+        "browser": true,
+        "node": true,
+        "commonjs": true,
+        "jest": true
     },
     "parser": "babel-eslint",
-    "extends": "eslint:recommended",
+    "extends": "standard",
     "parserOptions": {
         "sourceType": "module"
     },
