--- a/package.json
+++ b/package.json
@@ -1,36 +1,43 @@
 {
   "name": "node-hot-dev",
-  "version": "1.0.0",
-  "description": "node项目模板",
+  "version": "0.1.0",
+  "description": "Node template",
   "main": "dest/index.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon --config nodemon.json",
     "start": "node dest/index.js",
-    "compile": "babel src --out-dir dest",
-    "lint": "eslint --fix src",
+    "clean": "rm -rf ./dest",
+    "compile": "npm run clean && babel src --out-dir dest",
+    "build": "npm run lint && npm run compile",
+    "lint": "eslint src",
+    "lintfix": "eslint --fix src",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
+    "babel",
     "hot",
-    "dev",
     "node"
   ],
   "author": "lanyue",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "eslint": "^4.19.1"
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "@babel/runtime": "^7.5.5"
   }
 }
