--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint src",
     "lintfix": "eslint --fix src",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "babel",
@@ -35,7 +36,8 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "jest": "^24.9.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5"
