--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,12 @@
       }
     }]
   ],
-  "plugins": []
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ]
+  ]
 }
