--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node template",
   "main": "dest/index.js",
   "scripts": {
-    "dev": "nodemon --config nodemon.json",
+    "dev": "nodemon --config nodemon.json dev.js",
+    "dev:debug": "nodemon --config nodemon.json --inspect dev.js",
     "start": "node dest/index.js",
     "clean": "rm -rf ./dest",
     "compile": "npm run clean && babel src --out-dir dest",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
@@ -40,6 +41,13 @@
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.5.5"
+    "@babel/runtime": "^7.5.5",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "reflect-metadata": "^0.1.13",
+    "serve-favicon": "^2.5.0"
   }
 }
