--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node-hot-dev",
-  "version": "1.0.0",
-  "description": "node项目模板",
-  "main": "dest/app.js",
+  "name": "koa-ts",
+  "version": "0.1.0",
+  "description": "Typescript template for Koa.",
+  "main": "dest/index.js",
   "scripts": {
-    "dev": "nodemon --watch src/**/* -e ts,tsx -i src/typings/**/* --exec node -r ./.dev/auto.js -r ts-node/register src/app.ts",
-    "dev-debug": "nodemon --inspect --watch src/**/* -e ts,tsx -i src/typings/**/* --exec node -r ./.dev/auto.js -r ts-node/register src/app.ts",
+    "dev": "nodemon --watch src/**/* --exec node -r ts-node/register src/index.ts",
+    "dev-debug": "nodemon --inspect --watch src/**/* --exec node -r ts-node/register src/index.ts",
     "clean": "rm dest -rf",
     "compile": "npm run clean && tsc",
     "build": "npm run lint && npm run compile",
@@ -14,38 +14,38 @@
     "lint": "eslint src --ext .js,.ts",
     "lintfix": "eslint src --fix --ext .js,.ts"
   },
-  "keywords": [
-    "hot",
-    "dev",
-    "node"
-  ],
-  "author": "lanyue",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mengdu/node-hot-dev.git"
+  },
+  "author": "",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mengdu/node-hot-dev/issues"
+  },
+  "homepage": "https://github.com/mengdu/node-hot-dev#readme",
   "devDependencies": {
-    "@types/dotenv": "^6.1.1",
-    "@types/koa": "^2.0.49",
-    "@types/koa-router": "^7.0.42",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
-    "eslint": "^6.0.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-node": "^9.1.0",
+    "@types/koa": "^2.11.3",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-favicon": "^2.0.19",
+    "@types/koa-router": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.2"
+    "eslint-plugin-standard": "^4.0.1",
+    "ts-node": "^8.8.1",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "camelcase": "^5.3.1",
-    "chalk": "^2.4.2",
-    "dotenv": "^8.0.0",
-    "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-compress": "^3.0.0",
-    "koa-favicon": "^2.0.1",
-    "koa-mount": "^4.0.0",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0"
+    "chalk": "^3.0.0",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-favicon": "^2.1.0",
+    "koa-router": "^8.0.8",
+    "reflect-metadata": "^0.1.13"
   }
 }
